configure proxy to back

--- a/angular.json
+++ b/angular.json
@@ -58,8 +58,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {"proxyConfig": "./proxy.conf.json"},
           "configurations": {
+          
             "production": {
+          
               "browserTarget": "toDoListNewApp:build:production"
             },
             "development": {
